--- a/.github/workflows/cicd-aws.yml
+++ b/.github/workflows/cicd-aws.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
       - name: Build Project
-        run: mvn clean install -DskipTests
+        run: cd cs544-202403-project && mvn clean install -DskipTests
       - name: Login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
