--- a/.github/workflows/cicd-aws.yml
+++ b/.github/workflows/cicd-aws.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+      - name: Build Base Module
+        run: cd common-base-module && mvn clean install -DskipTests
       - name: Build Project
         run: cd cs544-202403-project && mvn clean install -DskipTests
       - name: Login to docker hub
