--- a/cs544-202403-project/src/main/resources/application.yml
+++ b/cs544-202403-project/src/main/resources/application.yml
@@ -33,8 +33,8 @@ spring:
   application:
     name: cs544-202403-project
   datasource:
-#    url: jdbc:mysql://database-1.czd4kykju5ju.us-east-1.rds.amazonaws.com:3306/cs544-labs?useSSL=false&serverTimezone=UTC
-    url: jdbc:mysql://localhost:3306/cs544-project?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://database-1.czd4kykju5ju.us-east-1.rds.amazonaws.com:3306/cs544-labs?useSSL=false&serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306/cs544-project?useSSL=false&serverTimezone=UTC
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
