--- a/.github/workflows/cicd-aws.yml
+++ b/.github/workflows/cicd-aws.yml
@@ -35,13 +35,12 @@ jobs:
       - name: Delete old container
         run: sudo docker rm -f ea-springboot-container
       - name: Run docker container
-        uses: docker/run-action@v2
-        with:
-          image: hafeezurrahmansaleh/ea-springboot:latest
-          name: ea-springboot-container
-          ports: "8080:8080"
-          detach: true
-          use_sudo: true
+#        with:
+#          image: hafeezurrahmansaleh/ea-springboot:latest
+#          name: ea-springboot-container
+#          ports: "8080:8080"
+#          detach: true
+#          use_sudo: true
             # Add other options as needed
-#        run: docker run -d -p 8080:8080 --name ea-springboot-container hafeezurrahmansaleh/ea-springboot
+        run: sudo docker run -d -p 8080:8080 --name ea-springboot-container hafeezurrahmansaleh/ea-springboot
 
